# rovidev-membership-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
bot/: __init__.py  app.py  config.py  gateways.py  models.py  repository.py  service.py  stripe_gateway.py  telegram_gateway.py  worker.py
examples/: simulate_lifecycle.py
tests/: conftest.py  test_app.py  test_expiry.py  test_idempotency.py  test_service.py
